# GirlFriendAI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
bot/main_bot/: app.py  content.py  menu.py
bots/: __init__.py
bots/main_bot/: app.py  bot.py  config_en.yaml  config_ru.yaml  create_girl_bot.py  markup.py
bots/main_bot/content/: __init__.py  config.yaml  exception.py
data/: parser.py
db/: __init__.py  config.py  config.yaml  create_db.py  table.py  utils.py
docker/: DockerfilePy  docker-compose.yml
parser/: __init__.py  config.py  config.yaml  instant_id.py
