[tool.poetry]
name = "girlfriendai"
version = "0.1.0"
description = "GirlFriendAI"
authors = ["Parutin Maxim <parutin.ma@phystech.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.22.0"
pytelegrambotapi = "^4.21.0"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
telethon = "^1.36.0"
aiogram = "^3.10.0"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
